--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@ include 'kodilla-good-patterns'
 include 'kodilla-spring'
 include 'kodilla-spring-web'
 include 'kodilla-patterns'
+include 'kodilla-patterns2'
 include 'kodilla-jdbc'
 
