--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,7 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-patterns2'
 include 'kodilla-jdbc'
+include 'kodilla-testing2'
+include 'kodilla-testing2'
+include 'kodilla-testing2'
 
